--- a/modulo2/desafios/d10/style/style.css
+++ b/modulo2/desafios/d10/style/style.css
@@ -5,12 +5,12 @@
     src: url(fontes/idroid.otf);
 }
 
-@font-face {
-    font-family: 'IBM Plex Serif';
-    src: url(fontes/IBMPlexSerif-Medium.ttf);
-}
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 @media screen and (max-width: 600px) {
+    header>h1 {
+        text-align: center;
+    }
     #quadro ul {
         columns: 1;
     }
@@ -23,9 +23,10 @@
     --cor3: #5B9593;
     --cor4: #367A78;
 
-    --fonte-padrao: Arial, Helvetica, sans-serif;
-    --fonte-destaque: 'IBM Plex Serif', serif;
-    --fonte-android: idroid, cursive;
+
+    --fonte-header: 'VT323', monospace;
+    --fonte-android: idroid, cursive;    
+    --fonte-padrao:  Verdana, Geneva, Tahoma, sans-serif;
 }
 
 * {
@@ -35,67 +36,67 @@
 
 body {
     margin: 0%;
-    background-color: var(--cor0);
+    background-image: linear-gradient(to top, var(--cor1), transparent);
     font-family: var(--fonte-padrao);
 }
 
-header {
-    background-image: linear-gradient(to right, var(--cor3), transparent);
-    margin: 20px;
-    min-height: 130px;
-    text-align: left;
-    color: var(--cor0);
-    padding-top: 20px;
-    font-family: var(--fonte-destaque);
+header {    
+    padding: 10px 0px 20px 0px;    
+    border-radius: 30px;
+    margin: 10px 10px 30px 10px;
+    background-image: linear-gradient(to right, var(--cor3), var(--cor0));
+    color: var(--cor0);    
+    font-family: var(--fonte-header);
+    text-align: center; 
 }
 
 header h1 {
-    margin-bottom: 5px;
     padding: 20px;
-    font-size: 3em;
+    color: white;
+    font-size: 50px;
     font-weight: normal;
+    letter-spacing: 4px;
 }
 
-header p {
-    font-size: 1.2em;
+header p { 
+    padding: 0px 0px 20px 20px;
+    margin: auto;
+    max-width: 500px;    
+    color: white;    
+    font-size: 20px;
     font-weight: light;
-    max-width: 500px;
-    text-align: left;
-    padding: 0px 0px 30px 30px;
+    text-shadow: 1px 1px 0px var(--cor4);
 }
 
-nav {
-    text-align: left;
-    text-shadow: none;
-    margin: 20px;
-    background-color: white;
-    padding: 10px;
+nav {       
+    display: inline-block;
+    padding: 8px 20px;    
+    border-radius: 30px;
+    margin: auto;
+    max-width: fit-content;   
+    background-color: var(--cor0);    
+    text-align: center;
 }
 
 nav>a {
-    color: var(--cor3);
-    border-radius: 6px;
-    margin: 10px;
-    padding: 8px;
+    padding: 8px 20px;    
+    border-radius: 6px;   
+    color: var(--cor4);
+    font-size: large;    
     text-decoration: none;
-    font-size: larger;
-    transition-duration: 0.5s;
 }
 
 nav>a:hover {
-    color: var(--cor4);
-    font-weight: bold;
-    border-radius: 6px;
-    padding: 8px;
+    color: var(--cor2);
+    transition-duration: 1s;
 }
 
-main {
-    margin-bottom: 30px;
+main {    
+    padding: 0px;    
     border-radius: 0px 0px 10px 10px;
-    padding: 0px;
-    background-color: white;
-    text-align: justify;
+    margin-bottom: 30px;    
     font-size: large;
+    text-align: justify;
 }
 
 main p {
@@ -104,36 +105,61 @@ main p {
     text-indent: 30px;
 }
 
-article>h1 {
-    color: var(--cor4);
-    font-family: idroid, sans-serif;
-    font-weight: 500;
+main img {
+    width: 100%;
 }
 
-article>h2 {
-    color: white;
-    padding: 5px;
-    font-family: idroid, sans-serif;
-    background-image: linear-gradient(to right, var(--cor3), transparent);
-    font-weight: 500;
+main img.pequena {    
+    display: block;    
+    margin: auto;
+    max-width: 350px;
+    min-width: 350px;
+}
+
+main a {
+    padding: 2px;
+    border-radius: 2px;
+    color: var(--cor4);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+main a:hover{
+    color: var(--cor2);
+}
+
+main a::after {
+    content: '\00A0\1F4CE';
 }
 
 article {
-    display: block;
+    display: block;    
+    padding: 30px;    
+    border: 1px solid var(--cor3);
     margin: auto;
     min-width: 320px;
-    max-width: 900px;
-    padding: 30px;
-    border: 1px solid var(--cor3);
+    max-width: 1000px;
     font-family: var(--fonte-padrao);
     font-weight: light;
     font-size: medium;
-    line-height: 2em;
+    line-height: 2;
 }
 
-.palavra {
-    color: var(--cor3);
-    font-weight: bold;
+article>h1 {    
+    padding-bottom: 15px;
+    border-bottom: 1px dashed var(--cor2);
+    color: var(--cor4);
+    font-family: idroid, sans-serif;
+    font-weight: 500;
+    text-align: center;
+}
+
+article>h2 {
+    padding: 5px;
+    background-image: linear-gradient(to right, var(--cor3), transparent);    
+    color: white;    
+    font-family: idroid, sans-serif;
+    font-weight: 500;
 }
 
 article>ul {
@@ -144,30 +170,17 @@ article>ul li:before {
     content: '✓ ';
 }
 
-main img {
-    width: 100%;
+.palavra {
+    color: var(--cor3);
+    font-weight: bold;
 }
 
-main img.pequena {
-    max-width: 350px;
-    min-width: 350px;
-    display: block;
-    margin: auto;
-}
-
-main a {
-    background-color: var(--cor3);
-    padding: 1px;
-    color: var(--cor0);
-    text-decoration: none;
-}
-
-#video {
-    background-color: var(--cor1);
-    margin: 0px -20px 30px -20px;
-    padding: 20px;
+#video {    
     position: relative;
-    padding-bottom: 59%;
+    padding: 20px; 
+    padding-bottom: 59%;   
+    margin: 0px -20px 30px -20px;
+    background-color: var(--cor1);
 }
 
 #video>iframe {
@@ -178,13 +191,14 @@ main a {
     height: 90%;
 }
 
-aside {
+aside {    
+    padding: 30px;    
+    border-radius: 20px;
+    margin: 40px;
     min-width: 800;
     max-width: 800px;
     background-color: var(--cor0);
-    border-radius: 20px;
-    padding: 30px;
-    margin: 40px;
+
 }
 
 aside ul {
@@ -194,20 +208,20 @@ aside ul {
 }
 
 aside>h3 {
+    padding: 10px;    
+    border-radius: 10px 10px 0px 0px;
+    margin: -30px -30px 0px -30px;
     background-color: var(--cor4);
     color: white;
-    padding: 10px;
-    margin: -30px -30px 0px -30px;
-    border-radius: 10px 10px 0px 0px;
 }
 
-footer {
-    background-color: var(--cor4);
-    text-align: center;
-    color: white;
-    font-weight: lighter;
-    font-size: 14px;
+footer {    
     padding: 15px;
+    background-color: var(--cor4);    
+    color: white;    
+    font-size: 14px;
+    text-align: center;
+    font-weight: lighter;
 }
 
 footer a {
@@ -216,9 +230,9 @@ footer a {
     font-weight: bold;
 }
 
-footer a:hover {
+footer a:hover {    
+    padding: 1px;
+    border-radius: 4px;
     background-color: var(--cor0);
     color: var(--cor4);
-    padding: 1px;
-    border-radius: 3px;
 }
