--- a/modulo4/desafios/d13/estilos/style.css
+++ b/modulo4/desafios/d13/estilos/style.css
@@ -1,5 +1,20 @@
 @charset "UTF-8";
 
+@media (max-width: 500px) {
+    #ref {
+        display: none;
+    }
+    #redes-sociais {
+        height: 100vh;
+        justify-content: center;
+    }
+    #redes-sociais>a>img {
+        width: 36px;
+        margin: 6px;
+        margin-bottom: 50px;
+    }
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -23,7 +38,7 @@ main {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 400px;
+    width: 300px;
     height: 604px;
     background: url("../imagens/frame-iphone.png") center center no-repeat fixed;
     background-size: contain;
@@ -32,7 +47,7 @@ main {
 #tela {
     position: relative;
     top: 77.7px;
-    left: 71.6px;
+    left: 22px;
     width: 256px;
     height: 453px;
 }
