--- a/modulo4/desafios/d13/estilos/style.css
+++ b/modulo4/desafios/d13/estilos/style.css
@@ -59,7 +59,7 @@ main {
 }
 
 #redes-sociais img {
-    margin: 10px;
+    margin: 50px 100px 0px 0px;
     width: 50px;
     border-radius: 50%;
     box-sizing: border-box;
