--- a/modulo4/desafios/d13/estilos/style.css
+++ b/modulo4/desafios/d13/estilos/style.css
@@ -31,11 +31,14 @@ html, body {
     height: 100vh;
 }
 
-main {    
-    position: relative;
-    height: 100vh;
+body {    
     background: white url("../imagens/fundo.png") center center no-repeat fixed;
     background-size: cover;
+}
+
+main {
+    position: relative;
+    height: 100vh;
 }
 
 #smartphone {
