--- a/modulo4/exercicios/ex0026/mq002/estilos/style.css
+++ b/modulo4/exercicios/ex0026/mq002/estilos/style.css
@@ -1,3 +1,24 @@
 @charset "UTF-8";
 
 /*Configurações gerais*/
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    font-family: 'Courier New', Courier, monospace;
+    background-color: #233eff;
+}
+
+
+h1 {
+    color: white;
+    text-shadow: 2px 2px 0px #13207f;
+    padding: 10px;
+    text-align: center;
+    font-weight: normal;
+}
