--- a/modulo4/exercicios/ex0026/mq002/estilos/paisagem.css
+++ b/modulo4/exercicios/ex0026/mq002/estilos/paisagem.css
@@ -1,3 +1,10 @@
 @charset "UTF-8";
 
 /*Configurações modo paisagem*/
+
+body {
+    background: url(../../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
