--- a/modulo4/exercicios/ex0026/mq004/estilos/mediaquery.css
+++ b/modulo4/exercicios/ex0026/mq004/estilos/mediaquery.css
@@ -2,3 +2,83 @@
 
 /*Todas as demais medias*/
 
+/*Typical Device Breakpoints
+Pequenas telas: max 600px
+Smartphone - 600px - 768px
+Tablet - 768px - 1024px
+Desktop - 1024px - 1200px
+Grandes telas - Acima de 1200px*/
+
+/*O site já é feito para mobile first, logo, ignora media queries para smartphones*/
+
+@media print {
+
+    body {
+        background: url(../../imagens/back-print.jpg); /*Desnecessário já que não imprime bg*/
+    }
+
+    main {
+        border: 2px solid black;
+    }
+
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: block;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+
+/*TABLET*/ 
+@media screen and (min-width: 768px) and (max-width:1024px) { 
+    body {
+        background: url(../../imagens/back-tablet.jpg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+    }
+    img#phone {display: none;}
+    img#tablet {display: block;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+
+/*DESKTOP*/
+@media screen and (min-width:1024px) and (max-width:1200px)  {
+    body {
+        background: url(../../imagens/back-pc.jpg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: block;}
+    img#tv {display: none;}
+}
+
+ /*GRANDES TELAS*/
+@media screen and (min-width: 1200px) {
+    body {
+        background: url(../../imagens/back-tv.jpg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+    }
+
+    main {
+        width: 800px;
+    }
+
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: block;}
+}
