--- a/modulo4/exercicios/ex0026/mq004/estilos/style.css
+++ b/modulo4/exercicios/ex0026/mq004/estilos/style.css
@@ -15,8 +15,11 @@ html {
 }
 
 body {
-    background: black url(../../imagens/back-phone.jpg) no-repeat center center;
+    background: black url(../../imagens/back-phone.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
     background-size: cover;
+    height: 90vh;
 }
 
 main {    
@@ -24,7 +27,7 @@ main {
     border-radius: 10px;    
     margin: auto;
     margin-top: 20px;
-    width: 400px;
+    width: 350px;
     background-color: rgba(255, 255, 255, 0.738);
 }
 
