--- a/modulo3/desafios/d12/style.css
+++ b/modulo3/desafios/d12/style.css
@@ -11,7 +11,7 @@
 }
 
 html, body {
-    background-color: darkolivegreen;
+    background-color: rgba(85, 107, 47, 0.722);
     min-height: 100vh;
 }
 
